# dff

./: .gitignore  CMakeLists.txt  INSTALL.Unix  LICENSE-ICONS  README  README.txt  __init__.py  dff  dff-gui.py  dff.py  launcher.sh
Prerequisites/: CMakeLists.txt
api/: CMakeLists.txt  __init__.py
api/env/: CMakeLists.txt  __init__.py  argument.cpp  conf.cpp  env.cpp  env.py  libenv.i  libenv.py  libenvPYTHON_wrap.cxx  results.cpp  vars.cpp
api/exceptions/: CMakeLists.txt  __init__.py  exceptions.cpp  libexceptions.i  libexceptions.py  libexceptionsPYTHON_wrap.cxx  patch.py
api/gui/: CMakeLists.txt  __init__.py
api/gui/box/: CMakeLists.txt  __init__.py  boolcombobox.py  checkbox.py  nodecombobox.py  stringcombobox.py
api/gui/button/: CMakeLists.txt  __init__.py  pushbutton.py
api/gui/dialog/: CMakeLists.txt  __init__.py  applymodule.py  extractor.py  property.py  selectnodes.py  uiapplymodule.py  uiproperty.py  uiselectnodes.py
api/gui/itemview/: CMakeLists.txt  __init__.py  listmodel.py  listthread.py  listview.py  nodeitem.py  rootitemmodel.py  selectnodeslistview.py  selectnodesmodel.py  thumbsitemmodel.py  thumbsthread.py  thumbsview.py  treeitemmodel.py  treeview.py
api/gui/widget/: CMakeLists.txt  __init__.py  applymoduletable.py  nodelist.py  nodetree.py
api/include/: argument.hpp  attrib.hpp  cmodule.hpp  conf.hpp  env.hpp  exceptions.hpp  export.hpp  fdmanager.hpp  fso.hpp  loader.hpp  node.hpp  results.hpp  search.hpp  type.hpp  vars.hpp  vfile.hpp  vfs.hpp  vtime.hpp
api/loader/: CMakeLists.txt  __init__.py  libloader.i  libloader.py  libloaderPYTHON_wrap.cxx  loader.cpp  loader.py
api/magic/: CMakeLists.txt  __init__.py  filetype.py  magic.mgc.win  magic.pyd
api/manager/: CMakeLists.txt  __init__.py  manager.py
api/module/: CMakeLists.txt  __init__.py  cmodule.cpp  fdmanager.cpp  libcmodule.i  libcmodule.py  libcmodulePYTHON_wrap.cxx  module.py  script.py
api/search/: CMakeLists.txt  __init__.py  boyer_moore.cpp  boyer_moore.hpp  libsearch.i  pattern.hpp  search.cpp
api/taskmanager/: CMakeLists.txt  __init__.py  processus.py  scheduler.py  taskmanager.py
api/type/: CMakeLists.txt  OS.py  __init__.py  attrib.cpp  libtype.i  libtype.py  libtypePYTHON_wrap.cxx  type.cpp  vtime.cpp
api/vfs/: CMakeLists.txt  __init__.py  fso.cpp  libvfs.i  libvfs.py  libvfsPYTHON_wrap.cxx  libvfsPYTHON_wrap.h  node.cpp  vfile.cpp  vfs.cpp  vfs.py
cmake_modules/: UseSWIG.cmake
debian/: changelog  control  copyright  rules
example/: CMakeLists.txt  dumbfs.py  generate.py
modules/: CMakeLists.txt  __init__.py
modules/builtins/: CMakeLists.txt  cd.py  fg.py  history.py  info.py  jobs.py  link.py  load.py  ls.py  open.py  rm.py  show_cwd.py  show_db.py
modules/fs/: CMakeLists.txt  __init__.py  mzipfile.py  streamstrings.py  unzip.py
modules/fs/carver/: CMakeLists.txt  DEventHandler.cpp  DEventHandler.hpp  carver.cpp  carver.hpp  carver.i  carver_io.cpp  common.hpp  fdmanager.cpp  filehandler.cpp  filehandler.hpp  interface.py  predef.py  typeSelection.py  userdef.py  utils.py
modules/fs/fat/: CMakeLists.txt  common.hpp  fat.cpp  fat.hpp  fat.i  fat_entries.cpp  fat_forensics.cpp  fat_io.cpp  fat_metadata.cpp  fat_revision_with_comment_1366  fat_struct.h  fdmanager.hpp  filehandler.cpp  filehandler.hpp  log.cpp  log.hpp  misc.cpp
modules/fs/fuse/: CMakeLists.txt  fuse.cpp  fuse.hpp  fuse.i
modules/fs/local/: CMakeLists.txt  local.hpp  local.i  ulocal.cpp  utype.cpp  utype.hpp  wlocal.cpp  wtype.cpp  wtype.hpp
modules/fs/partition/: CMakeLists.txt  common.hpp  fdmanager.cpp  fdmanager.hpp  filehandler.hpp  partition.cpp  partition.hpp  partition.i  partition_struct.h
modules/fs/shm/: CMakeLists.txt  __init__.py  fdmanager.cpp  fdmanager.hpp  shm.cpp  shm.hpp  shm.i  touch.py
modules/help/: CMakeLists.txt  man.py
modules/info/: CMakeLists.txt  fileinfo.py  statistics.py
modules/parser/: CMakeLists.txt  smsdecode.py  unxor.py
modules/process/: CMakeLists.txt  batch.py  evalexp.py  extract.py  pipe_exec.py  post_process.py
modules/process/cextract/: CMakeLists.txt  extract.cpp  extract.hpp
modules/search/: CMakeLists.txt  __init__.py  find.py  search_pattern.py  spare_research.py
modules/test/: CMakeLists.txt  statest.py
modules/test/loadtest/: CMakeLists.txt  test.cpp  test.hpp
modules/viewer/: CMakeLists.txt  (+3 more)
ressources/: CMakeLists.txt  Copyright.txt  Doxyfile  ReadMe.txt  dff.xpm  doxypy  linux_launcher.sh
testsuite/: CMakeLists.txt  dffdatetime.txt  dffunittest.py  enverrortest.py  fattest.py  hashtest.py  local.py  seek.py  vfserrortest.py
ui/: CMakeLists.txt  __init__.py  history.py  redirect.py  ui.py
ui/gui/: CMakeLists.txt  DFF.e4p  __init__.py  _mainWindow.py  dff.conf  gui.py  gui.qrc  gui_rc.py  mainWindow.py
ui/gui/configuration/: CMakeLists.txt  Config.py  Translator.py  __init__.py  _configureDFF.py  configureDFF.py
ui/gui/developper/: ressource.sh  update_ts.sh
ui/gui/i18n/: CMakeLists.txt  Dff_en.qm  Dff_en.ts  Dff_fr.qm  Dff_fr.ts  Project_en.ts  Project_fr.ts  UI_en.ts  UI_fr.ts  Viewers_en.ts  Viewers_fr.ts
ui/gui/icons/: CMakeLists.txt
ui/gui/ide/: CMakeLists.txt  DFF_Editor.py  DFF_Ide.py  Ide.py  __init__.py  actions.py  dialog.py  generateCode.py  ideWizard.py  ideWizardPages.py  messageBox.py  toolBar.py
ui/gui/scheduler/: CMakeLists.txt  __init__.py  _applyModule.py  applyModule.py
ui/gui/utils/: CMakeLists.txt  __init__.py  _selectNode.py  action.py  checkBox.py  comboBox.py  menu.py  pushButton.py  selectNode.py  standardItem.py  utils.py
ui/gui/vfs/: CMakeLists.txt  __init__.py  _propertyDialog.py  docknodelist.py  propertyDialog.py
ui/gui/vfs/listFolder/: CMakeLists.txt  ListFiles.py  ListModel.py  ListThread.py  ListView.py  ThumbsModel.py  ThumbsThread.py  ThumbsView.py  __init__.py
ui/gui/vfs/treeDir/: Browsers.py  CMakeLists.txt  DirModel.py  DirModelItem.py  DirView.py  __init__.py
ui/gui/widget/: CMakeLists.txt  __init__.py  info.py  interpreter.py  shell.py  stdio.py
ui/gui/wrapper/: CMakeLists.txt  __init__.py  connectorCallback.py  connectorWrapper.py
(+55 files in other folders)
